--- a/installation/_posts/2015-01-25-release-2.1.23.md
+++ b/installation/_posts/2015-01-25-release-2.1.23.md
@@ -1,9 +1,11 @@
 ---
-layout: 		post
-title: 			release 2.1.23
-category: 		administration
-tags:			release 
+layout: post
+title: release 2.1.23
+category: administration
+tags: release
+published: true
 ---
+
 
 <p class="message">
     What is in 2.1.23 version
@@ -12,7 +14,7 @@ tags:			release
 
 # Download
 
-[Git Tag Release 2.1.23] (https://github.com/nilsteampassnet/TeamPass/archive/master.zip)
+[Git Tag Release 2.1.23](https://github.com/nilsteampassnet/TeamPass/archive/master.zip)
 
 # Main Changes
 
@@ -48,7 +50,7 @@ The read-only folder are identified with the eye icon in front of the Folder nam
 
 ## New password library introduction
 
-A new library for password generation and encryption [PasswordLib] (https://github.com/ircmaxell/PHP-PasswordLib) is now part of the Teampass package. 
+A new library for password generation and encryption [PasswordLib](https://github.com/ircmaxell/PHP-PasswordLib) is now part of the Teampass package. 
 For this release, only the password generator is used but its encryption classes will be introduced in next Teampass release.
 
 # Change-Log
