--- a/installation/_posts/2014-11-25-2.1.22-released.md
+++ b/installation/_posts/2014-11-25-2.1.22-released.md
@@ -1,9 +1,11 @@
 ---
-layout: 		post
-title: 			2.1.22 is released
-category: 		administration
-tags:			release 
+layout: post
+title: 2.1.22 is released
+category: administration
+tags: release
+published: true
 ---
+
 
 <p class="message">
     Version 2.1.22 is released!
@@ -12,7 +14,7 @@ tags:			release
 
 # Download
 
-[Git Tag Release 2.1.22] (https://github.com/nilsteampassnet/TeamPass/releases/tag/2.1.22)
+[Git Tag Release 2.1.22](https://github.com/nilsteampassnet/TeamPass/releases/tag/2.1.22)
 
 # Main Changes
 
