--- a/installation/_posts/2014-10-10-2.1.21-released.md
+++ b/installation/_posts/2014-10-10-2.1.21-released.md
@@ -1,9 +1,11 @@
 ---
-layout: 		post
-title: 			2.1.21 is released
-category: 		administration
-tags:			release 
+layout: post
+title: 2.1.21 is released
+category: administration
+tags: release
+published: true
 ---
+
 
 <p class="message">
     Version 2.1.21 is released!
@@ -12,7 +14,7 @@ tags:			release
 
 # Download
 
-[Git Tag Release 2.1.21] (https://github.com/nilsteampassnet/TeamPass/archive/Release_2.1.21.zip)
+[Git Tag Release 2.1.21](https://github.com/nilsteampassnet/TeamPass/archive/Release_2.1.21.zip)
 
 # Changes
 
@@ -22,7 +24,7 @@ A new wrapper for database has been implement in order to implement MySQLi. [Mee
 
 ## Bugs correction
 
-Refer to [Github Change-Log page] (https://github.com/nilsteampassnet/TeamPass/releases/tag/2.1.21).
+Refer to [Github Change-Log page](https://github.com/nilsteampassnet/TeamPass/releases/tag/2.1.21).
 
 
 # What's next?
