--- a/installation/_posts/2014-05-25-2.1.20-released.md
+++ b/installation/_posts/2014-05-25-2.1.20-released.md
@@ -1,9 +1,11 @@
 ---
-layout: 		post
-title: 			2.1.20 is released
-category: 		administration
-tags:			release 
+layout: post
+title: 2.1.20 is released
+category: administration
+tags: release
+published: true
 ---
+
 
 <p class="message">
     Version 2.1.20 is released!
@@ -12,7 +14,7 @@ tags:			release
 
 # Download
 
-[Git Tag Release 2.1.20] (https://github.com/nilsteampassnet/TeamPass/releases/tag/2.1.20)
+[Git Tag Release 2.1.20](https://github.com/nilsteampassnet/TeamPass/releases/tag/2.1.20)
 
 # Main changes
 
@@ -23,7 +25,7 @@ Beside this, the strategy for file access has been totally reviewed and the quer
 
 ## Bugs correction
 
-Refer to [Github Change-Log page] (https://github.com/nilsteampassnet/TeamPass/releases/tag/2.1.20).
+Refer to [Github Change-Log page](https://github.com/nilsteampassnet/TeamPass/releases/tag/2.1.20).
 
 ## API
 
