--- a/installation/_posts/2015-01-25-release-2.1.23.md
+++ b/installation/_posts/2015-01-25-release-2.1.23.md
@@ -53,13 +53,15 @@ The read-only folder are identified with the eye icon in front of the Folder nam
 A new library for password generation and encryption [PasswordLib](https://github.com/ircmaxell/PHP-PasswordLib) is now part of the Teampass package. 
 For this release, only the password generator is used but its encryption classes will be introduced in next Teampass release.
 
+## New database encryption library
+
+Most interessant feature is the introduction of [PHPCrypt library](https://github.com/gilfether/phpcrypt) which is now used in order to handle $
+The complete related documentation is available in the author's webpage.
+This permits to get rid of `keys` table. Notice that it will not be deleted when updating to 2.1.23 but it is not used any more. It will in a future release.
+
 # Change-Log
 
 Complete changelog available at [Git Tag Release 2.1.23](https://github.com/nilsteampassnet/TeamPass/releases/tag/2.1.23).
-
-Most interessant feature is the introduction of [PHPCrypt library](https://github.com/gilfether/phpcrypt) which now used in order to handle all database data encryption.
-The complete related documentation is available in the author's webpage.
-This permits to get rid of `keys` table.
 
 # What's next?
 
