--- a/installation/_posts/2015-01-25-release-2.1.23.md
+++ b/installation/_posts/2015-01-25-release-2.1.23.md
@@ -25,7 +25,7 @@ Release 2.1.23 introduces an interface major change, some technical improvements
 The home page has now disappeared from Teampass. The user is directly redirected to the Items page.
 This feature was something asked by a lot of users, and it goes in the direction Teampass will tend to in the future 2.2 version.
 
-* ![Items page]({{ site.baseurl }}/assets/images/2015-01-25 11_27_32-Collaborative_Passwords_Manager.png)
+* ![Items page]({{ site.baseurl }}/img/posts/2015-01-25 11_27_32-Collaborative_Passwords_Manager.png)
 
 In the top menu, 2 new menus have been added, one for the last viewed items and the other one for actions related the user session.
 
