--- a/installation/_posts/2015-11-03-release.2.1.24.md
+++ b/installation/_posts/2015-11-03-release.2.1.24.md
@@ -21,7 +21,7 @@ Release ***2.1.24*** embeds a lot of new features, fixes and small GUI improveme
 
 DuoSecurity permits you to securize the user access to Teampass by adding a 2-Factor authentication. It is highly recommended to use it for maximum security purposes.
 
-As an Administrator, select the `Settings` page and the `2Factors` tab. For complete usage, please refer to [DUOSecurity usage]() page.
+As an Administrator, select the `Settings` page and the `2Factors` tab. For complete usage, please refer to [DUOSecurity usage](/2015-10-19-duo-security) page.
 
 ### 2 new access rights
 
