--- a/installation/_posts/2014-06-28-upgrade.md
+++ b/installation/_posts/2014-06-28-upgrade.md
@@ -25,6 +25,7 @@ The next described protocol is a recommended one.
 * Copy from `Teampass_old` to `Teampass` folder:
    * the file `/includes/settings.php`
    * the folders `backups`, `files` and `upload`
+   * if you have your `sk.php` inside includes/ folder, then copy it inside the new Teampass folder
 * Enter url `http://your_domain/teampass/install/upgrade.php`
 * Now follow the upgrade pages
 
