--- a/installation/_posts/2015-11-03-release.2.1.24.md
+++ b/installation/_posts/2015-11-03-release.2.1.24.md
@@ -13,7 +13,7 @@ Release ***2.1.24*** embeds a lot of new features, fixes and small GUI improveme
 
 **Notice that this release requires your attention before rolling it out on your production server**.
 
-> Currently it is not yet released but it is in "pre-production" status in branch `Development`. Only missing language files before being officially created.
+> [Get last release](https://github.com/nilsteampassnet/TeamPass/releases)
 
 ## New features
 
