--- a/installation/_posts/2016-01-29-release-2.1.25.md
+++ b/installation/_posts/2016-01-29-release-2.1.25.md
@@ -1,3 +1,12 @@
+---
+layout: post
+title: release 2.1.25
+category: administration
+tags: release
+published: true
+
+---
+
 # Release 2.1.25
 
 Release ***2.1.25*** is mostly a fix release in which was implemented a lot of corrections and security issues. 
