--- a/installation/_posts/2016-05-13-release-2.1.26.md
+++ b/installation/_posts/2016-05-13-release-2.1.26.md
@@ -1,3 +1,13 @@
+---
+layout: post
+title: release 2.1.26
+category: administration
+tags: release
+published: false
+
+---
+
+
 ## A New Post
 
 Enter text in [Markdown](http://daringfireball.net/projects/markdown/). Use the toolbar above, or click the **?** button for formatting help.
