--- a/installation/_posts/2016-05-13-release-2.1.26.md
+++ b/installation/_posts/2016-05-13-release-2.1.26.md
@@ -4,10 +4,41 @@ title: release 2.1.26
 category: administration
 tags: release
 published: false
-
 ---
 
+# Release 2.1.26
 
-## A New Post
+Release ***2.1.26*** introduces a couple of fixes and some new features. 
 
-Enter text in [Markdown](http://daringfireball.net/projects/markdown/). Use the toolbar above, or click the **?** button for formatting help.
+> [Get last release](https://github.com/nilsteampassnet/TeamPass/releases)
+
+## Main Changes
+
+### Security
+
+An arbitrary file download web vulnerability has been discovered and was patched by denying access to the `downloadFile.php` without authentication.
+
+Fixes related the implementation of `OWASP CSRF Protector Project` library which securises Teampass against Cross Site Request Forgery.
+
+Security fixes on some missed queries and on non-protected text fields.
+
+### Improvement of Syslog entries
+
+Shown and clipboard copied passwords are now send to Syslog.
+
+### Upgrade script manager
+
+A new script manager for upgrades has been created in order to secure future upgrades.
+
+### NEW ROLE - Rights Manager
+
+`Human Resources` role has been introduced. It permits a User to manage all Users independately of his/hers group.
+Notice that he will be also promoted to Manager role, and that he will not be able to change an existing administrator.
+
+### Automatic password change on remote server
+
+This new feature is 
+
+## Github tickets
+
+The complete list of changes tracked in Github are available in `changelog.md` file.
