--- a/installation/_posts/2016-05-13-release-2.1.26.md
+++ b/installation/_posts/2016-05-13-release-2.1.26.md
@@ -3,7 +3,7 @@ layout: post
 title: release 2.1.26
 category: administration
 tags: release
-published: false
+published: true
 ---
 
 # Release 2.1.26
