--- a/installation/_posts/2016-01-29-release-2.1.25.md
+++ b/installation/_posts/2016-01-29-release-2.1.25.md
@@ -1,10 +1,9 @@
 ---
-layout: post
+layout: page
 title: release 2.1.25
 category: administration
 tags: release
 published: true
-
 ---
 
 # Release 2.1.25
