--- a/installation/_posts/2016-05-13-release-2.1.26.md
+++ b/installation/_posts/2016-05-13-release-2.1.26.md
@@ -8,7 +8,7 @@ published: true
 
 Release ***2.1.26*** introduces a couple of fixes and some new features. 
 
-> [Get last release](https://github.com/nilsteampassnet/TeamPass/releases)
+**[Get last release](https://github.com/nilsteampassnet/TeamPass/releases)**
 
 ## Main Changes
 
@@ -33,33 +33,37 @@ A new script manager for upgrades has been created in order to secure future upg
 `Human Resources` role has been introduced. It permits a User to manage all Users independately of his/hers group.
 Notice that he will be also promoted to Manager role, and that he will not be able to change an existing administrator.
 
-### Automatic password change on remote server
+### NEW FEATURE - Remote server password change
 
-This new feature permits to change the password of a remote server (**only Linux**) using an SSH connection.
-It is enabled through the Settings page.
+This new feature permits to perform the password change on a remote server to be synchronized with the Teampass Item.
 
-It works as described below.
+[Read more about it](2016-06-19-remote-server-password-change)
 
-- Based upon field `url` starting with prefix `ssh://`, the script knows what server to connect to.
-- Based upon fields `login` and `password`, the script knows what credentials to use to update the remote server.
+## Minor (but interesting) Changes
 
-Now follow next steps:
+Some changes that may interest you:
 
-- Display the details of the Item in Teampass
-- Select option `Update server's password`
-- A new dialogbox will be displayed
-- You can select either `One shot change` or `Automatic mode`
-- Enter the credentials to permit the Teampass script to get authorize through SSH
-- Launch the change
+- Estonian language was added
+- Any new sub-folder created by a user needs to have a minimum complexity level at least equal to the top-folder one. *Note that this restriction is not applied for Manager and Administrator roles*.
+- After 3 bad login attemps, the user needs to wait 10 seconds before a new attempt.
 
-Teampass will perform next things:
+## Security analysis with RIPS
 
-- Get connected to the remote server through SSH
-- Generate a new automatic complexe password (if you decided to go on with `automatic mode`)
-- Launch a linux command to change the password of the user
-- Close SSH connection
-- Store the new password in database (if you decided to go on with `automatic mode`)
+Teampass was analyzed for security bugs with RIPS by [Risptech](https://www.ripstech.com/).
+
+This analysis identified mainly 2 issues:
+
+- security issue in API with the usage of `parse_str` (which has been removed)
+- potential issue using  `$_SESSION` which will be removed by the introduction of the configuration file instead of `$_SESSION` variable.
+
+![](https://www.ripstech.com/img/rips.png)
 
 ## Github tickets
 
 The complete list of changes tracked in Github are available in `changelog.md` file.
+
+## Roadmap for release 2.1.27
+
+- Implement usage of configuration file
+- Implement new encryption library `PHP-Encryption` which permits to ensure a high level of security of your passwords. For more information, [please read more](https://github.com/defuse/php-encryption)
+- Implement of third party 2FA connection [AGSES](https://www.agses.net/)
