--- a/usage/_posts/2013-03-25-faq.md
+++ b/usage/_posts/2013-03-25-faq.md
@@ -7,31 +7,30 @@ comments:   true
 noToc:      false
 ---
 
-<div style="message">
 The FAQ page helps you with classical questions you may have.
-</div>
-<span class="linkmore"></span>
 
 > This page is under construction ...
 
-# How to set Teampass under Maintenance?
+## How to set Teampass under Maintenance?
 
 * Open `Settings` page
-* Spot `Set TeamPass in Maintenance mode` option
+* Find `Set TeamPass in Maintenance mode` option
 * Enable it
-* Save
 
-# I don't see the Import button
+## I don't see the Import button
 
-> To be written
+* Open `Settings` page
+* Select `Customize` tab
+* Find `Allow importing from CSV/Keepass file` option
+* Enable it
 
-# Why a blank page after installation?
+## Why a blank page after installation?
 The main reason for getting a blank/white page after installation is related `include.php` file.
 Follow next steps to ensure every settings are correct in this file.
 
 * Open file `includes\include.php` with your favourite editor
 
-## Line 14 @define('SECUREPATH', ...)
+### Line 14 @define('SECUREPATH', ...)
 
 It defines the path to the secured folder you have indicated during installation.
 
@@ -46,7 +45,7 @@ It defines the path to the secured folder you have indicated during installation
 @define('SECUREPATH', '/var/services/web/security/teampass');
 `
 
-## Line 15 require_once ...
+### Line 15 require_once ...
 
 It loads the sk.php file when using Teampass.
 
