--- a/installation/_posts/2014-06-28-upgrade.md
+++ b/installation/_posts/2014-06-28-upgrade.md
@@ -5,16 +5,13 @@ category: 		installation
 tags:			upgrade
 ---
 
-<p class="message">
-    This page describes how to upgrade TeamPass to a newest release.
-</p>
-<span class="linkmore"></span>
+This page describes how to upgrade TeamPass to a newest release.
 
-# Introduction
+## Introduction
 
 It is recommended to update your Teampass instance to be the closest the latest released version.
 
-# Upgrade protocol
+## Upgrade protocol
 
 The next described protocol is a recommended one.
 
@@ -29,17 +26,17 @@ The next described protocol is a recommended one.
 * Enter url `http://your_domain/teampass/install/upgrade.php`
 * Now follow the upgrade pages
 
-## Step 1
+### Step 1
 
 It's an introduction page with some recommendations and the licence display.
 
-## Step 2
+### Step 2
 
 Some server checks are performed based upon the path. Please check that the path is correct before starting.
 
 <i class="fa fa-bullhorn" style="margin-right:10px;"> Be sure to check that Encryption Key is correct.
 
-## Step 3
+### Step 3
 
 Check that the given database credentials are correct and permit Teampass to get connected to the database.
 
@@ -51,12 +48,12 @@ It is required to give the next credentials:
 - **Password**
 - **Tables prefix**
 
-## Step 4
+### Step 4
 
 This step permits the tables creation and data copy.
 
 A second part of this step consists in generating the Items keys if needed.
 
-## Done
+### Done
 
 Once the previous steps are done, Teampass is now upgraded.
