--- a/installation/_posts/2017-02-25-release-2.1.27.md
+++ b/installation/_posts/2017-02-25-release-2.1.27.md
@@ -2,5 +2,31 @@ Release ***2.1.27*** introduces a couple of fixes and some new features.
 
 **[Get last release](https://github.com/nilsteampassnet/TeamPass/releases)**
 
+## DEFUSE encryption library
+
+This version introduces the usage of Defuse library instead of PhpCrypt for encryption process.
+
+[More information about Defuse](https://github.com/defuse/php-encryption)
+
+### Impact
+
+In case of using an older Teampass version, it is mandatory to run the upgrade process to perform the encryption changes inside the database.
+
+The existing Salt will be deleted and replaced by a new key.
+
+## AGSES authentication
+
+AGSES card can now be used to get securly connected.
+
+[More information about AGSES](https://agses.net/)
+
+## New features
+
+### Custom fields encryption
+
+It is now possible to decide to encrypt or not the `Custom Fields` data inside the database.
+
+This securize even more the data you could decide to add inside `Custom Fields` such as Credit Card PIN.
+
 ## Main Changes
 
