--- a/installation/_posts/2017-02-25-release-2.1.27.md
+++ b/installation/_posts/2017-02-25-release-2.1.27.md
@@ -2,6 +2,12 @@ Release ***2.1.27*** introduces a couple of fixes and some new features.
 
 **[Get last release](https://github.com/nilsteampassnet/TeamPass/releases)**
 
+## New Teampass documentation pages
+
+Teampass documentation is under rework for this new release.
+
+[ReadTheDocs for Teampass](http://teampass.readthedocs.io/en/latest)
+
 ## DEFUSE encryption library
 
 This version introduces the usage of Defuse library instead of PhpCrypt for encryption process.
@@ -20,6 +26,8 @@ AGSES card can now be used to get securly connected.
 
 [More information about AGSES](https://agses.net/)
 
+[Read more](http://teampass.readthedocs.io/en/latest/features/feat-2FA/#securize-login-with-agses)
+
 ## New features
 
 ### Custom fields encryption
@@ -28,5 +36,62 @@ It is now possible to decide to encrypt or not the `Custom Fields` data inside t
 
 This securize even more the data you could decide to add inside `Custom Fields` such as Credit Card PIN.
 
+[Read more](http://teampass.readthedocs.io/en/latest/features/feat-custf/)
+
+### Folder copy
+
+It is now possible to copy a folder to another place in the Tree structure. This will duplicate all Sub-folders and related Items.
+
+An example of application could be to manage `folders structure template`. For example, define a template of Folders that you use for your Customers. Once defined, just copy it and rename it with the name of your Customer.
+
+[Read more](http://teampass.readthedocs.io/en/latest/features/feat-folders/#copy-a-folder)
+
+### Massive move/copy of Items
+
+It is now possible to move or copy a set of Items.
+
+The option `Allow user to perform massive move and delete operations` needs to be enabled.
+
+[Read more](http://teampass.readthedocs.io/en/latest/features/feat-items/#mass-move-delete)
+
+### Change proposal
+
+It is now possible to make change proposal on an Item. By this any user who can access an Item could suggest a change to the Author and Manager
+
+[Read more](http://teampass.readthedocs.io/en/latest/features/feat-items/#suggest-an-item-change)
+
 ## Main Changes
 
+### User language selection
+
+The language selection is now located inside the Profile dialogbox.
+
+### User login existance
+
+The user login is now checked "live" to ensure that now duplicates could exist.
+
+### Coherant counters are tables 
+
+The counters in tables have been improved to permit a coherant displayed.
+
+### Securized 2FA authentication
+
+A new library for QR generation has been added. It permits the creation of QR codes by Teampass without usage of an external web library. This enforces the security as the key are not transmitted any more via Internet.
+
+By this, the security is enforced during the coupling of the user's account and its 2FA device.
+
+### User management dialogbox improved
+
+The User management dialogbox has been improved permitting to create/edit a User account in one step. By this, when creating a User, a Manager or Administrator directly also defines its Roles, and Allowed/Disallowed folders.
+
+### Item can be created without password
+
+A new option has been added to permit the creation of an Item without a Password.
+
+This option is called `Allow item to be created without any password defined `.
+
+### Improved Find interface
+
+From the `Find` interface, it is now possible to perform a massive copy or move operation on several Items.
+
+The option `Allow user to perform massive move and delete operations` needs to be enabled.
